--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
-      src="./data/finisher-header.es5.min.js"
+      src="/src/assets/finisher-header.es5.min.js"
       type="text/javascript"></script>
   </body>
 </html>
