--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
-      src="/src/assets/finisher-header.es5.min.js"
-      type="text/javascript"></script>
+    <script src="/finisher-header.es5.min.js" type="text/javascript"></script>
   </body>
 </html>
