--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="flex flex-col justify-center items-center" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/finisher-header.es5.min.js" type="text/javascript"></script>
   </body>
